--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/BrianM0330/pf-tracker#readme",
   "dependencies": {
+    "@types/graphql-iso-date": "^3.4.0",
     "apollo-server-express": "^2.17.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
+    "graphql-iso-date": "^3.6.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
     "type-graphql": "^1.0.0",
