--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.6.2",
+    "class-validator": "^0.12.2",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
