--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/graphql-iso-date": "^3.4.0",
     "apollo-server-express": "^2.17.0",
+    "axios": "^0.20.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "graphql-iso-date": "^3.6.1",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.8",
     "@types/node": "^14.6.2",
     "class-validator": "^0.12.2",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
