--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,10 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   },
   "compileOnSave": false,
   "exclude": [
