--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "apollo-server-express": "^2.17.0",
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
     "graphql-iso-date": "^3.6.1",
+    "http": "0.0.1-security",
+    "node-cron": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
     "type-graphql": "^1.0.0",
