--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "homepage": "https://github.com/BrianM0330/pf-tracker#readme",
   "dependencies": {
     "@types/graphql-iso-date": "^3.4.0",
+    "@types/node-cron": "^2.0.3",
     "apollo-server-express": "^2.17.0",
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-request": "^3.4.0",
     "http": "0.0.1-security",
     "node-cron": "^2.0.3",
     "reflect-metadata": "^0.1.13",
