--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "nodemon": "^2.0.4",
+    "prettier": "^2.2.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   }
