--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/d3": "^6.2.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.55",
     "@types/react": "^16.14.2",
@@ -15,6 +16,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.3",
+    "d3": "^6.3.1",
     "graphql": "^15.4.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
