--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@toast-ui/react-chart": "^1.0.2",
     "@types/d3": "^6.2.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.55",
@@ -23,6 +24,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "tui-chart": "^3.11.2",
     "typescript": "^3.9.7"
   },
   "scripts": {
