--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,7 +32,14 @@
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
     "type-graphql": "^1.0.0",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.6.2",
+    "class-validator": "^0.12.2",
+    "cors": "^2.8.5",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
