--- a/package.json
+++ b/package.json
@@ -19,27 +19,28 @@
   },
   "homepage": "https://github.com/BrianM0330/pf-tracker#readme",
   "dependencies": {
+    "@types/express": "^4.17.8",
     "@types/graphql-iso-date": "^3.4.0",
+    "@types/node": "^14.6.2",
     "@types/node-cron": "^2.0.3",
     "apollo-server-express": "^2.17.0",
     "axios": "^0.20.0",
+    "class-validator": "^0.12.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-request": "^3.4.0",
     "http": "0.0.1-security",
+    "newrelic": "^7.1.0",
     "node-cron": "^2.0.3",
+    "prettier": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
+    "ts-node": "^9.0.0",
     "type-graphql": "^1.0.0",
     "typeorm": "^0.2.25",
-    "@types/express": "^4.17.8",
-    "@types/node": "^14.6.2",
-    "class-validator": "^0.12.2",
-    "cors": "^2.8.5",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
